--- a/index1.css
+++ b/index1.css
@@ -38,6 +38,10 @@
   text-align: center;
 }
 
+.imagesbuttons{
+  margin-bottom: 50px;
+}
+
 p{
   font-size: 40px;
   text-align: center;
@@ -61,7 +65,10 @@ p{
   background-color: skyblue;
 }
 
-* {box-sizing: border-box;}
+#mlvideos video{
+  width: 100%;
+  height: auto;
+}
 
 /*#container2 {
   position: relative;
@@ -90,4 +97,11 @@ p{
 }
 #container2:hover .overlay {
  display: block !important;
+}
+
+footer{
+  font-size: 12px;
+  font-style: italic;
+  text-align: center;
+  margin-top: 100px;
 }
