--- a/index1.css
+++ b/index1.css
@@ -7,6 +7,16 @@
   margin: 40px;
   padding: 50px;
 } */
+body {
+  background-color: lightgreen;
+}
+
+@media only screen and (max-width: 700px) {
+  body {
+    background-color: lightblue;
+  }
+}
+
 #MLtable {
   width: 100%;
   height: 100%;
@@ -19,9 +29,16 @@
  background-repeat: no-repeat;
 }
 
-.badge{
+.badge-secondary{
+  height: auto;
+  width: auto;
   font-size: 40px;
   text-align: center;
+}
+
+#ml{
+  width: 100%;
+  height: auto;
 }
 
 #ml:hover {
@@ -59,9 +76,9 @@ p{
 }
 
 #mlimages img{
-  padding: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
+  padding: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
   background-color: skyblue;
 }
 
