--- a/index1.css
+++ b/index1.css
@@ -8,7 +8,7 @@
   padding: 50px;
 } */
 body {
-  background-color: lightgreen;
+  background-color: grey;
 }
 
 @media only screen and (max-width: 700px) {
@@ -65,6 +65,7 @@ p{
 }
 
 .skills {
+  font-weight: bold;
     border: 1px solid black;
     padding: 5px;
     text-align: center;
