--- a/index1.css
+++ b/index1.css
@@ -18,6 +18,7 @@ body {
 }
 
 #MLtable {
+  margin-bottom: 30px;
   width: 100%;
   height: 100%;
   border-collapse: collapse;
@@ -37,6 +38,11 @@ body {
 }
 
 #ml{
+  width: 100%;
+  height: auto;
+}
+
+#ml1{
   width: 100%;
   height: auto;
 }
@@ -78,7 +84,6 @@ p{
 
 #mlimages img{
   padding: 5px;
-  margin-left: 5px;
   margin-right: 5px;
   background-color: skyblue;
 }
