--- a/index1.css
+++ b/index1.css
@@ -25,16 +25,26 @@ body {
 }
 
 .mlbanner{
- background-image: url("MLbanner.jpg");
+ padding: 10%;
+ width: auto;
+ height: auto;
  background-size: cover;
  background-repeat: no-repeat;
 }
 
-.badge-secondary{
+.fontprop{
+  font-weight: bolder;
   height: auto;
   width: auto;
-  font-size: 40px;
+  font-size: 35px;
   text-align: center;
+}
+
+@supports (-webkit-text-stroke: 2px black) {
+  .fontprop {
+    -webkit-text-stroke: 1px black;
+    -webkit-text-fill-color: white;
+  }
 }
 
 #ml{
@@ -45,6 +55,11 @@ body {
 #ml1{
   width: 100%;
   height: auto;
+  cursor: pointer;
+}
+
+#ml1:hover{
+  opacity: 0.7;
 }
 
 #ml:hover {
@@ -93,16 +108,25 @@ p{
   height: auto;
 }
 
-/*#container2 {
-  position: relative;
-  width: 50%;
-  max-width: 300px;
-}*/
+@supports (-webkit-text-stroke: .1px white) {
+  h6 {
+    -webkit-text-stroke: .1px white;
+    -webkit-text-fill-color: black;
+  }
+}
+
+h6{
+  font-weight:bolder;
+}
 
 .image {
   display: block;
   width: 100%;
   height: auto;
+}
+
+.container2:hover .overlay {
+  opacity: 1 !important;
 }
 
 .overlay {
@@ -111,16 +135,21 @@ p{
   background: rgb(0, 0, 0);
   background: rgba(0, 0, 0, 0.5); /* Black see-through */
   color: #f1f1f1;
+  width: 30%;
+  opacity: 0;
   transition: .5s ease;
-  display: none;
   color: white;
-  font-size: 10px;
-  padding: 5px;
+  font-size: 12px;
+  padding: 2px;
   text-align: center;
 }
-#container2:hover .overlay {
- display: block !important;
+.image {
+  display: block;
+  width: 100%;
+  height: auto;
+  cursor: pointer;
 }
+
 
 footer{
   font-size: 12px;
