updated banner with text

--- a/index1.css
+++ b/index1.css
@@ -25,11 +25,21 @@ body {
 }
 
 .mlbanner{
- padding: 10%;
- width: auto;
- height: auto;
- background-size: cover;
- background-repeat: no-repeat;
+  position: relative;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+.mlbanner img {vertical-align: middle;}
+
+.mlbanner .mlbannercontent {
+  position: absolute;
+  bottom: 0;
+  background: rgb(0, 0, 0); /* Fallback color */
+  background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+  color: #f1f1f1;
+  width: 100%;
+  padding: 20px;
 }
 
 .fontprop{
@@ -117,12 +127,6 @@ p{
 
 h6{
   font-weight:bolder;
-}
-
-.image {
-  display: block;
-  width: 100%;
-  height: auto;
 }
 
 .container2:hover .overlay {
