--- a/index1.css
+++ b/index1.css
@@ -7,8 +7,13 @@
   margin: 40px;
   padding: 50px;
 } */
-.navbar-brand{
-  border-radius: 20px;
+.navbtn{
+  border-radius: 5px;
+  font-size: 20px;
+  font-weight: bold;
+}
+.navbtn:hover{
+  background-color: skyblue;
 }
 body {
   background-color: grey;
@@ -157,6 +162,25 @@ h6{
   cursor: pointer;
 }
 
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: red;
+  color: white;
+  cursor: pointer;
+  padding: 5px;
+  border-radius: 4px;
+}
+
+#myBtn:hover {
+  background-color: #555;
+}
 
 footer{
   font-size: 12px;
