--- a/heroes.css
+++ b/heroes.css
@@ -6,18 +6,30 @@ body{
   opacity: 1;
 }
 
-#ml{
-  width: 100%;
+div{
+    margin-bottom: 10px;
+}
+
+.mlimages{
+  font-size: 10px;
+  text-align: center;
   border-radius: 5px;
 }
 
-#mlimages img{
-  padding: 3px;
-  margin-right: 5px;
-  background-color: skyblue;
-  border-radius: 5px;
+.img-fluid{
+  border: 5px;
+  border-radius: 10px;
+  padding: 2px;
+  background-color:skyblue;
 }
 
+.img-fluid:hover{
+  opacity: 0.7;
+}
+
+#btnhover:hover{
+  background-color: red;
+}
 #myBtn {
   display: none;
   position: fixed;
